# sber-invest-report

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: diagnostics.rs  error.rs  lib.rs  main.rs  parse_config.rs  parser.rs  prelude.rs  raw.rs  report.rs  report_set.rs  types.rs  utils.rs
tests/: parser_integration.rs
tests/fixtures/: broker_report.html  iis_report.html  prod_data.html
