[package]
name = "sber-invest-report"
version = "0.2.0"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
description = "Парсер инвестиционных отчётов Сбербанка"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexqnt/sber-invest-report"
homepage = "https://github.com/hexqnt/sber-invest-report"
# documentation = "https://docs.rs/sber-invest-report"
readme = "README.md"
categories = ["finance", "parsing"]
keywords = ["sberbank", "investment", "parser", "reports"]
exclude = ["data/*", "target/*"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
regex = "1.12"
rust_decimal = "1.41"
scraper = "0.25"
thiserror = "2.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
